--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,14 @@ img {
 .section-first {
   background-color: #2e2f42;
   padding: 188px 0;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url('../images/people-office.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .section-first .description {
@@ -177,6 +185,18 @@ img {
   width: calc((100% - 72px) / 4);
 }
 
+.second-list-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #8e8f99;
+  border-radius: 4px;
+  background: #f4f4fd;
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+}
+
 .section-head {
   color: #2e2f42;
   /* font-family: 'Roboto', sans-serif; */
@@ -213,6 +233,12 @@ img {
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
+.social-list-worker {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+
 .container-worker {
   padding: 32px 0;
 }
@@ -224,6 +250,37 @@ img {
 
 .container-worker .text {
   text-align: center;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.social-list-worker-item {
+  width: 40px;
+  height: 40px;
+}
+
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+
+.social-list-worker-icon {
+  background-color: #4d5ae5;
+}
+
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: #404bbf;
+}
+
+.social-list-link:hover .social-list-worker-icon,
+.social-list-link:focus .social-list-worker-icon {
+  background-color: #404bbf;
 }
 
 /*  fourth section */
@@ -310,4 +367,19 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+
+.footer-headline {
+  color: var(--WHITE, #fff);
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
 }
