--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,12 @@ img {
 
 /* HEADER CONTENT */
 
+.header {
+  border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 .container {
   width: 1158px;
   padding-left: 15px;
@@ -70,6 +76,25 @@ img {
 .nav-list {
   display: flex;
   gap: 40px;
+}
+
+.active-link {
+  color: #404bbf;
+  position: relative;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.active-link::after {
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  border-radius: 2px;
+  color: #404bbf;
+  width: 100%;
+  content: '';
 }
 
 .logo {
@@ -127,6 +152,8 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .section-first .description {
@@ -147,8 +174,7 @@ img {
 
 .button-order {
   color: #ffffff;
-  background-color: #4d5ae5;
-  /* font-family: 'Roboto', sans-serif; */
+  background: #4d5ae5;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -158,16 +184,22 @@ img {
   display: block;
   min-width: 169px;
   height: 56px;
-  border: none;
   border-radius: 4px;
   margin: 48px auto;
   padding: 16px 32px;
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 .button-order:hover,
 .button-order:focus {
   background-color: #404bbf;
   cursor: pointer;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* second section */
@@ -267,10 +299,12 @@ img {
   height: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-worker-icon {
   background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-link:hover,
@@ -304,6 +338,35 @@ img {
 .section-fourth-list-item {
   background: #ffffff;
   /* width: calc((100% - 48px) / 3); */
+}
+
+.project-image {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 40px 32px;
+  background: var(--IRIS, #4d5ae5);
+  color: #f4f4fd;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  overflow: auto;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-image:hover .overlay,
+.project-image:focus .overlay {
+  transform: translateY(0);
 }
 
 .project-case {
@@ -343,6 +406,17 @@ img {
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.footer-wrapper {
+  display: flex;
+  align-items: baseline;
+}
+
+.main-footer {
+  margin-right: 120px;
 }
 
 .footer-link {
@@ -377,9 +451,36 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 16px;
 }
 
 .footer-social-list {
   display: flex;
   gap: 16px;
+}
+
+.footer-social-list-link {
+  background-color: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-footer-icon {
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-list-link:hover,
+.footer-social-list-link:focus {
+  background-color: #31d0aa;
+}
+
+.footer-social-list-link:hover .social-footer-icon,
+.footer-social-list-link:focus .social-footer-icon {
+  background-color: #31d0aa;
 }
